# codecrafters-http-server-rust

./: Cargo.toml  README.md
src/: file_server.rs  headers.rs  lib.rs  main.rs  multi_map.rs  request.rs  response_writer.rs  router.rs  server.rs  slice_ext.rs  status_code_registry.rs  stream_reader.rs  test_utils.rs
src/middleware/: gzip_compressor.rs  mod.rs
src/router/: mod.rs
src/router/matcher/: chain.rs  dynamic.rs  exact.rs  mod.rs  subtree.rs
