[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.38"                             # error handling
