[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.21", features = ["derive"] }
ctor = "0.2.8"
flate2 = "1.0.35"
lazy_static = "1.5.0"
path-clean = "1.0.1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.38"                             # error handling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
tempdir = "0.3.7"
